; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-commit.c_tb_init.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-commit.c_tb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transaction_buffer = type { i64, i64, i32 }

@.str = private unnamed_addr constant [69 x i8] c"Not enough memory to allocate transaction buffer (%lld bytes size).\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.transaction_buffer*, i64)* @tb_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tb_init(%struct.transaction_buffer* %0, i64 %1) #0 {
  %3 = alloca %struct.transaction_buffer*, align 8
  %4 = alloca i64, align 8
  store %struct.transaction_buffer* %0, %struct.transaction_buffer** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = call i32 @malloc(i64 %5)
  %7 = load %struct.transaction_buffer*, %struct.transaction_buffer** %3, align 8
  %8 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %7, i32 0, i32 2
  store i32 %6, i32* %8, align 8
  %9 = load %struct.transaction_buffer*, %struct.transaction_buffer** %3, align 8
  %10 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @kprintf(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str, i64 0, i64 0), i64 %14)
  %16 = call i32 @exit(i32 1) #3
  unreachable

17:                                               ; preds = %2
  %18 = load i64, i64* %4, align 8
  %19 = load %struct.transaction_buffer*, %struct.transaction_buffer** %3, align 8
  %20 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %19, i32 0, i32 0
  store i64 %18, i64* %20, align 8
  %21 = load %struct.transaction_buffer*, %struct.transaction_buffer** %3, align 8
  %22 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  ret void
}

declare dso_local i32 @malloc(i64) #1

declare dso_local i32 @kprintf(i8*, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
